<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.funthomas424242</groupId>
    <artifactId>flat-project</artifactId>
    <packaging>jar</packaging>
    <version>0.0.3-SNAPSHOT</version>
    <name>Test JAR Install Plugin</name>
    <inceptionYear>2016</inceptionYear>

    <url>https://github.com/FunThomas424242/jar-install-plugin/</url>

    <properties>
        <maven.compiler.release>11</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>gui4j</groupId>
            <artifactId>gui4j</artifactId>
            <version>1.2.30</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.6.2</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>13</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.funthomas424242</groupId>
                <artifactId>jar-install-plugin</artifactId>
                <version>0.0.4</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- Specify the MyMojo parameter -->
                    <downloads>
                        <downloadArtifact>
                            <url>https://bintray.com/funthomas424242/funthomas424242-libs/download_file?file_path=com%2Fgithub%2Ffunthomas424242%2Forg.gui4j%2F0.1.5%2Forg.gui4j-0.1.5.jar</url>
                            <groupId>gui4j</groupId>
                            <artifactId>gui4j</artifactId>
                            <version>1.2.30</version>
                            <scope>compile</scope>
                        </downloadArtifact>
                    </downloads>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <release>11</release>
                    <compilerArgs>
                        <arg>-Xlint:all</arg>
                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>--add-opens=java.base/java.net=ALL-UNNAMED</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>